@@ -15,7 +15,7 @@ from .lib import openjp2 as opj2
 
 # Do not change the format of this next line!  Doing so risks breaking
 # setup.py
-version = "0.5.11"
+version = "0.5.12"
 _sv = LooseVersion(version)
 version_tuple = _sv.version
 
