@@ -1,3 +1,5 @@
+May 18, 2014 - v0.5.12  Restored _v3 functions removed in 0.5.11
+
 May 09, 2014 - v0.5.11  Added support for Python 3.4, OpenJPEG 2.0.1, and
     OpenJPEG 2.1.0.
 
